# local-llm-provider

./: .clangd  .env.example  .gitignore  .gitmodules  AGENT_PLAN.md  Dockerfile  HARDWARE.md  MOLT_EVOLUTION_UPGRADE.md  Principle.md  RAG_CATEGORY.md  RAG_MIGRATION.md  README.md  REQUIREMENT.md  SPEC.md  VibeVoice-ASR-README.md  auth.py  build.sh  check_zluda.py  constants.py  deploy.sh  diagnose_rag.py  docker-compose-elasticsearch-init.sh  docker-compose.env.yml  docker-compose.yml  install_window_rocm.bat  install_window_rocm.sh  main.py  manifest.json  model_provider.py  permission_manager.py  poe_model_provider.py  pyproject.toml  rag.py  requirements.txt  requirements_agents.txt  response_chunk_example.json  start.sh  start_wsl.sh  test.py  test_agent_system.py  (+9 more)
.github/: FUNDING.yml
adapters/: base_adapter.py  http_adapter.py  protocol_bridge.py  stdio_adapter.py
agents/: __init__.py  agent_base.py  agent_runtime.py  context_storage.py  error_handler_agent.py  error_utils.py  planning_agent.py  qa_agent.py  risk_agent.py  router_agent.py  runtime_factory.py  runtime_state.py  verification_agent.py
clients/: cli.py  remote_llm.py
controllers/: __init__.py  agent_controller.py  base_controller.py  file_controller.py  llm_controller.py  rag_controller.py  voice_controller.py
file_loaders/: __init__.py  base_loader.py  chatgpt_loader.py  deepseek_loader.py  unified_model_loader.py
globals/: __init__.py
interfaces/: __init__.py  abstraction_types.py  agent_protocol_types.py  decay_types.py  evolution_types.py  feedback_judge_types.py  feedback_types.py  memory_types.py  molt_types.py  version_types.py
kernel_lab/: CMakeLists.txt  Dockerfile_DevEnv  README.md  __init__.py  docker-compose.dev.yml  install.sh  kernel_lab_hip.cpp  requirement.txt
kernel_lab/cuda/: CMakeLists.txt  __init__.py  install.sh
kernel_lab/cuda/include/: kernel_lab cuh  kernel_lab.cuh
kernel_lab/cuda/src/: kernel_lab.cu
kernel_lab/cuda/tests/: test_add.cu
kernel_lab/cuda/torch_ext/: setup.cpp
kernel_lab/hip/: CMakeLists.txt
kernel_lab/hip/include/: kernel_lab.hpp
kernel_lab/hip/src/: kernel_lab.hip
kernel_lab/hip/tests/: test_add.hip
kernel_lab/hip/torch_ext/: setup.cpp
kernel_lab/include/: kernel_lab.hpp
kernel_lab/src/: kernel_lab.hip
kernel_lab/tests/: test_add.cpp  test_add.hip
kernel_lab/torch_ext/: setup.cpp
mcp_server/: rag.py
model_convert/: to_gguf.py  to_gguf.sh  to_onnx.py
model_providers/: __init__.py  comfyui_provider.py  content_type.py  inference_engine.py  janus_model_provider.py  llama_cpp_engine.py  local_model_provider.py  model_provider.py  multimodal_provider.py  openai_model_provider.py  provider_base.py  provider_registry.py  remote_model_provider.py  transformers_engine.py  unified_model_loader.py
providers/: __init__.py
remote_providers/: __init__.py  openai_model_provider.py  poe_model_provider.py
repositories/: evolution_repository.py  mongodb_repository.py  neo4j_repository.py
retrievers/: ExpandedRetriever.py  __init__.py  es_retriever.py  expanded_retriever.py  graph_retriever.py  hybrid_retriever.py  reranker.py
routers/: __init__.py  version.py
schemas/: __init__.py  agent_protocol.py  capability.py  evolution_trace.py  execution_protocol.py  graph.py  permission.py
scripts/: cleanup_rag_data.py  create_context_tables.sql  docker-entrypoint.sh
services/: abstraction_engine.py  agent_protocol_service.py  decay_calculator.py  decay_scheduler.py  evolution_dispatcher.py  feedback_judge.py  feedback_service.py  graph_extraction_service.py  molt_controller.py  molt_trace_collector.py  skill_researcher.py  task_scheduler.py  version_manager.py
skills/: README.md  __init__.py  chrome_devtools_skill.py  example_chrome_skill_usage.py  example_dynamic_skill_loading.py  skill_registry.py  test_skills.py
tests/: chatgpt.data.ex.json  deepseek.data.ex.json  demo_mcp_permissions.py  demo_permissions_simple.py  reproduce_process_logging.py  response_example.json  test_agent_protocol.py  test_agent_protocol_integration.py  test_agent_system.py  test_api_endpoints.py  test_bitsandbytes.py  test_cuda.py  test_error_handler.py  test_execution_protocol.py  (+19 more)
tts_estimate/: .env.example  README.md  main.py  pyproject.toml
tts_estimate/application/: evaluator_service.py
tts_estimate/config/: settings.py
tts_estimate/domain/: interfaces.py
tts_estimate/infrastructure/: dnsmos.py  speaker_similarity.py  wer_calculator.py  whisper_asr.py
tts_estimate/tests/: test_evaluator.py
(+30 files in other folders)
